--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/package",
-  "name": "unnamed",
-  "version": "0.0.0",
+  "name": "@mark1russell7/bundle-dev",
+  "version": "1.0.0",
+  "description": "Dev workflow bundle - aggregates client packages for development",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -18,11 +19,46 @@
   "scripts": {
     "build": "tsc -b",
     "typecheck": "tsc --noEmit",
-    "clean": "rm -rf dist .tsbuildinfo"
+    "clean": "rm -rf dist .tsbuildinfo",
+    "postinstall": "client announce"
   },
-  "sideEffects": false,
+  "dependencies": {
+    "@mark1russell7/client": "github:mark1russell7/client#main",
+    "@mark1russell7/client-cli": "file:../client-cli",
+    "@mark1russell7/client-pnpm": "file:../client-pnpm",
+    "@mark1russell7/client-lib": "github:mark1russell7/client-lib#main",
+    "@mark1russell7/client-git": "github:mark1russell7/client-git#main",
+    "@mark1russell7/client-dag": "github:mark1russell7/client-dag#main",
+    "@mark1russell7/client-fs": "github:mark1russell7/client-fs#main",
+    "@mark1russell7/client-shell": "github:mark1russell7/client-shell#main",
+    "@mark1russell7/client-procedure": "github:mark1russell7/client-procedure#main"
+  },
   "devDependencies": {
-    "typescript": "^5.9.3",
-    "@mark1russell7/cue": "github:mark1russell7/cue#main"
+    "@mark1russell7/cue": "github:mark1russell7/cue#main",
+    "typescript": "^5.9.3"
+  },
+  "keywords": [
+    "bundle",
+    "dev",
+    "procedures"
+  ],
+  "license": "MIT",
+  "sideEffects": false,
+  "client": {
+    "procedures": "./dist/register.js"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@mark1russell7/cue",
+      "@mark1russell7/client",
+      "@mark1russell7/client-cli",
+      "@mark1russell7/client-pnpm",
+      "@mark1russell7/client-lib",
+      "@mark1russell7/client-git",
+      "@mark1russell7/client-dag",
+      "@mark1russell7/client-fs",
+      "@mark1russell7/client-shell",
+      "@mark1russell7/client-procedure"
+    ]
   }
 }
