Export register.js for MCP server imports

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
+    },
+    "./register.js": {
+      "import": "./dist/register.js"
     }
   },
   "files": [
